--- a/translator-service/translator-service.csproj
+++ b/translator-service/translator-service.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.66" />
       <PackageReference Include="FastEndpoints" Version="7.1.0-beta.24" />
       <PackageReference Include="FastEndpoints.Swagger" Version="7.0.1" />
       <PackageReference Include="MassTransit" Version="8.5.5-develop.2383" />
