--- a/translator-service/translator-service.csproj
+++ b/translator-service/translator-service.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+    <Configurations>Debug;Release;Standard</Configurations>
+    <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
 </Project>
